@@ -127,6 +127,9 @@ Release 2.7.3 - UNRELEASED
     YARN-4938. MiniYarnCluster should not request transitionToActive to RM
     on non-HA environment. (Eric Badger via aajisaka)
 
+    YARN-4924. NM recovery race can lead to container not cleaned up.
+    (sandflee via jlowe)
+
 Release 2.7.2 - 2016-01-25
 
   INCOMPATIBLE CHANGES
